[gd_scene load_steps=7 format=3 uid="uid://b1q4af2cic5ll"]

[ext_resource type="Script" path="res://worms_like_terrain_test.gd" id="1_5hrbs"]
[ext_resource type="Texture2D" uid="uid://cuqyfefa68xjh" path="res://icon.svg" id="2_fyw0g"]
[ext_resource type="Script" path="res://addons/rmsmartshape/shapes/shape_closed.gd" id="3_057p8"]
[ext_resource type="Resource" uid="uid://c3fnta33xga6p" path="res://test_ss2d_material.tres" id="5_pay7n"]
[ext_resource type="Script" path="res://addons/rmsmartshape/shapes/point_array.gd" id="6_xu4pk"]

[sub_resource type="Resource" id="Resource_8mr1v"]
script = ExtResource("6_xu4pk")
_points = {}
_point_order = Array[int]([])
_constraints = {}
_next_key = 0
_material_overrides = {}

[node name="WormsLikeTerrainTest" type="Node2D"]
script = ExtResource("1_5hrbs")

[node name="Visual" type="Polygon2D" parent="."]
texture_repeat = 2
texture = ExtResource("2_fyw0g")
polygon = PackedVector2Array(73, 23, 26, 163, 195, 186, 77, 313, 35, 468, 262, 518, 395, 411, 464, 522, 670, 521, 681, 376, 781, 303, 797, 300, 816, 223, 682, 194, 427, 204, 354, 293, 328, 211, 341, 147, 577, 113, 798, 151, 863, 120, 819, 18)

[node name="CutShape" type="Polygon2D" parent="."]
polygon = PackedVector2Array(436, -20, 450, -18, 407, 679)

[node name="Collision" type="StaticBody2D" parent="."]

[node name="CollisionPolygon" type="CollisionPolygon2D" parent="Collision"]
unique_name_in_owner = true

[node name="CutShape2" type="Polygon2D" parent="."]
position = Vector2(232, 113)
polygon = PackedVector2Array(-41, -2, -38, -17, -32, -28, -18, -36, 1, -44, 13, -44, 24, -40, 35, -33, 44, -26, 44, -15, 43, -4, 37, 10, 32, 17, 18, 29, -5, 34, -22, 32, -32, 24, -38, 14)

[node name="Shape_test" type="Node2D" parent="."]
texture_repeat = 2
script = ExtResource("3_057p8")
_points = SubResource("Resource_8mr1v")
shape_material = ExtResource("5_pay7n")
